# Notes_App_with_MCP

./: MCP.txt  README.md  instructions.txt  main.py  notes.db  pyproject.toml  requirements.txt  template.py
notes_app/: database.py  main.py  models.py  notes_mcp.py  schemas.py
notes_app/static/: index.html
